--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
     <h1>cssproject2</h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid, praesentium.</p>
 </body>
 </html>
